// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Select Compact 1`] = `
<div
  className="fd-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        className="fd-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-label="Compact"
              className="fd-select fd-select--compact"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="combobox"
              tabIndex={0}
            >
              <div
                className="fd-select__control"
              >
                <span
                  aria-label={null}
                  className="fd-select__text-content"
                >
                  Select
                </span>
                <span
                  className="fd-button fd-button--transparent fd-select__button"
                >
                  <i
                    aria-hidden={true}
                    className="sap-icon--slim-arrow-down"
                    role="img"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select Dev 1`] = `
<div
  className="fd-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        className="fd-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-mocked-short-id"
              aria-disabled={false}
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-label="Select"
              className="fd-select"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="combobox"
              tabIndex={0}
            >
              <div
                className="fd-select__control"
              >
                <span
                  aria-label={null}
                  className="fd-select__text-content"
                >
                  select
                </span>
                <span
                  className="fd-button fd-button--transparent fd-select__button"
                >
                  <i
                    aria-hidden={true}
                    className="sap-icon--slim-arrow-down"
                    role="img"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select Disabled 1`] = `
<div
  className="fd-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        className="fd-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-disabled={true}
              aria-label="Disabled"
              className="fd-select"
              onClick={[Function]}
              role="combobox"
              tabIndex={-1}
            >
              <div
                className="fd-select__control is-disabled"
              >
                <span
                  aria-label={null}
                  className="fd-select__text-content"
                >
                  Select
                </span>
                <span
                  className="fd-button fd-button--transparent fd-select__button"
                >
                  <i
                    aria-hidden={true}
                    className="sap-icon--slim-arrow-down"
                    role="img"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select Empty Option 1`] = `
<div
  className="fd-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        className="fd-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-label="Select"
              className="fd-select"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="combobox"
              tabIndex={0}
            >
              <div
                className="fd-select__control"
              >
                <span
                  aria-label="Select an option"
                  className="fd-select__text-content"
                />
                <span
                  className="fd-button fd-button--transparent fd-select__button"
                >
                  <i
                    aria-hidden={true}
                    className="sap-icon--slim-arrow-down"
                    role="img"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select No Styles 1`] = `
<div
  className="xxx-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="xxx-popover__control"
    >
      <div
        className="xxx-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="xxx-popover__control"
          >
            <div
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-label="Select"
              className="xxx-select"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="combobox"
              tabIndex={0}
            >
              <div
                className="xxx-select__control"
              >
                <span
                  aria-label={null}
                  className="xxx-select__text-content"
                >
                  Select
                </span>
                <span
                  className="xxx-button xxx-button--transparent xxx-select__button"
                >
                  <i
                    aria-hidden={true}
                    className="sap-icon--slim-arrow-down"
                    role="img"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select Primary 1`] = `
<div
  className="fd-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        className="fd-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-controls="fd-mocked-short-id"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-label="Primary"
              className="fd-select"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="combobox"
              tabIndex={0}
            >
              <div
                className="fd-select__control"
              >
                <span
                  aria-label={null}
                  className="fd-select__text-content"
                >
                  Select
                </span>
                <span
                  className="fd-button fd-button--transparent fd-select__button"
                >
                  <i
                    aria-hidden={true}
                    className="sap-icon--slim-arrow-down"
                    role="img"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select Read Only 1`] = `
<div
  className="fd-popover"
  onBlur={[Function]}
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        className="fd-popover"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              aria-label="readOnly"
              aria-readonly={true}
              className="fd-select"
              onClick={[Function]}
              role="combobox"
              tabIndex={0}
            >
              <div
                className="fd-select__control is-readonly"
              >
                <span
                  aria-label={null}
                  className="fd-select__text-content"
                >
                  List Item 1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Select Validation States 1`] = `
<div
  className="fddocs-container"
>
  <div
    className="fd-popover"
    onBlur={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-label="Select"
                className="fd-select"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="fd-select__control is-error"
                >
                  <span
                    aria-label={null}
                    className="fd-select__text-content"
                  >
                    Error
                  </span>
                  <span
                    className="fd-button fd-button--transparent fd-select__button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--slim-arrow-down"
                      role="img"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
    onBlur={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-label="Select"
                className="fd-select"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="fd-select__control is-warning"
                >
                  <span
                    aria-label={null}
                    className="fd-select__text-content"
                  >
                    Warning
                  </span>
                  <span
                    className="fd-button fd-button--transparent fd-select__button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--slim-arrow-down"
                      role="img"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
    onBlur={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-label="Select"
                className="fd-select"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="fd-select__control is-success"
                >
                  <span
                    aria-label={null}
                    className="fd-select__text-content"
                  >
                    Success
                  </span>
                  <span
                    className="fd-button fd-button--transparent fd-select__button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--slim-arrow-down"
                      role="img"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
    onBlur={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-popover"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-controls="fd-mocked-short-id"
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-label="Select"
                className="fd-select"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <div
                  className="fd-select__control is-information"
                >
                  <span
                    aria-label={null}
                    className="fd-select__text-content"
                  >
                    Information
                  </span>
                  <span
                    className="fd-button fd-button--transparent fd-select__button"
                  >
                    <i
                      aria-hidden={true}
                      className="sap-icon--slim-arrow-down"
                      role="img"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
